[project]
name = "stl-treemap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pdoc>=14.7.0",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--cov=stl_treemap --cov-report=term-missing --cov-config=pyproject.toml --cov-report=html:build/coverage --cov-report=xml:build/coverage/coverage.xml"
testpaths = [
    "test",
]
pythonpath = ["."]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
select = [
    "ASYNC", # ASYNC
    "B", # flake8-bugbear
    "E",  # pycodestyle
    "D", # flake8-docstrings
    "F", # Pyflakes
    "FAST", # fast
    # "G", # Log formatting,
    "I", # isort
    "ICN", # flake8-import-conventions
    "LOG",
    "PLC", # pylint rules
    "Q", # Quotes
    "SIM", # flake8-simplify
    "T", # flake8-print
    "UP", # pyupgrade
]
ignore = ["D104", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]

[tool.ruff.lint.isort]
known-third-party = []

[tool.black]
line-length = 120
target-version = ['py312']
